--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script language = "JavaScript">
         history.forward()
     </script>
-    <link rel="stylesheet" href="/assets/css/index.css">
+    <link rel="stylesheet" href="index.css">
     <title>Index</title>
 </head>
 <body>
