--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/menu.css">
+    <link rel="stylesheet" href="menu.css">
     <script language = "JavaScript">
         history.forward()
     </script>
@@ -17,11 +17,11 @@
     <main class="main">
       <div class="menu">
         <ul>
-          <li><a href="/assets/html/registry.html">Registry</a></li>
-          <li><a href="/assets/html/rent.html">Rent</a></li>
-          <li><a href="/assets/html/control.html">Control</a></li>
-          <li><a href="/assets/html/setting.html">Setting</a></li>
-          <li><a href="/index.html">Close</a></li>
+          <li><a href="registry.html">Registry</a></li>
+          <li><a href="rent.html">Rent</a></li>
+          <li><a href="control.html">Control</a></li>
+          <li><a href="setting.html">Setting</a></li>
+          <li><a href="index.html">Close</a></li>
         </ul>
       </div>
     </main>
