--- a/control.html
+++ b/control.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content=
 "width=device-width, initial-scale=1.0">
     <title>Control</title>
-    <link rel="stylesheet" href="/assets/css/control.css">
+    <link rel="stylesheet" href="control.css">
     <link rel="stylesheet" href=
 "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
 </head>
@@ -20,7 +20,7 @@
             <small>Welcome Control Board</small>
         </div>
         <div class="submenu">
-            <a href="/menu.html">Menu</a>
+            <a href="menu.html">Menu</a>
         </div>
     </div>
     <div class="board">
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <script src="/assets/js/control.js"></script>
+    <script src="control.js"></script>
 </body>
 
 </html>
