--- a/registry.html
+++ b/registry.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/registry.css">
+    <link rel="stylesheet" href="registry.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/assets/js/configuraciongeneral.js"></script>
+    <script src="configuraciongeneral.js"></script>
     <title>Registry</title>
 </head>
 <body class="grid-container">
